# python-application-template

./: .flake8  .isort.cfg  Makefile  README.md  pyproject.toml  pytest.ini
docs/: api_and_implementation.rst  command_line_tools.rst  conf.py  index.rst
src/{{package_name}}/: __init__.py
src/{{package_name}}/cli/: console.py
src/{{package_name}}/lib/: constants.py  exc.py
tests/: test_console.py
